# experiments

./: .gitignore  .gitmodules
asm/: test.c
autohotkey/: x11-style-window-operations.ahk
c/: malloc-speed.c
e/: build.sh
emscripten/: json-stringify-horribleness.c
github/: prvs.rb  pulls.py  stats.sh
java/: Mem.java
libei/: Cargo.toml  build.rs
logstash/: elasticsearch.conf
mysql/: Makefile  my.cnf
presentations/: monitorama.md
qemu/: distros.json  distros.rb  fun.sh  guest.mcl  notes.md  vms.mcl
ragel/: grammar.c  grammar.rb  grammar.rl  kv.rl  mpf.rb  mpf.rl  syslog_proto_grok.rb  syslog_proto_re.rb  syslog_protocol.rb
randomcode/: abort.c  alarm.rb  anon.rb  arraylen.c  bdb-functionpointer-test.c  bdb_secondary_indeces.c  bindtohash.rb  bsearch.rb  bunny-amqp.rb  bunny-test.rb  cairo-example.c  cairo-xshape-example.c  call-like-direct-dispatch.c  carrot-amqp.rb  curb-elasticsearch.rb  dlopen_self.c  drb.rb  elasticsearch-test.rb  enum.c  escape.c  evmachclient.rb  evmachserver.rb  exponential-backoff.c  forkdup.c  forkhack.rb  funcloc.c  getfocus.c  getlogin.c  getpwent.c  imlib-screencap.c  jni-abort-override.c  jruby-em-ssl.rb  keycheck.c  libcmain.c  libevent-execwatch.c  libevent-fileandprocbuffers.c  libevent-filefollow.c  libevent.c  listenexec.c  logproxy.rb  (+59 more)
react/: joystick.css  joystick.js  one-axis-joystick.html
rpm/: Makefile  test.spec
rspec/: test.rb
rust/ratatui/wiggle/: Cargo.toml
rust/ratatui/wiggle/src/: main.rs
scripts/: LICENSE  albumcover.py  arpmitm.sh  flashbsd.sh  ipfallowme.sh  lidshut.sh  minibsd.sh  sgrep.sh  (+16 more)
(+1292 files in other folders)
