[package]
name = "wiggle"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
rand = { version = "0.9.2", features = ["small_rng"] }
ratatui = { version = "0.30.0", features = ["palette"] }
tokio = { version = "1.49.0", features = ["macros", "net", "rt", "time"] }
